2019-06-30  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdev.c: Fix a bug that fake-bold is not handled properly
	in some situations as reported in
	https://tug.org/pipermail/dvipdfmx/2019-June/000014.html.
	When text rendering mode is changed within a text block which
	is enclosed by q and Q, the change does not affect subsequent
	text blocks. Current implementation of text handling is not
	robust so we may need to reconsider it.

2019-06-01  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* unicode.c: Fix a bug that end of buffer check was wrong.

2019-05-26  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cmap_write.c, dvipdfmx.c, pdfdev.c, pdfdev.h, pdfdoc.c
	spc_dvips.c, spc_pdfm.c, truetype.c, xbb.c:
	Fix for compiler warnings.
	* tt_post.c: Add missing "*/" in a deactivated section.
	* system.h: "pragma warning" only when _MSC_VER is defined.

2019-05-22  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* tt_gsub.c: Fix a bug that otl_gsub_read_alternate() and
	otl_gsub_read_ligature() exit loops wrongly for erroneous
	data, which leads to uninitialized values.
	Reported by Chih-Hsuan Yen:
	https://tug.org/pipermail/dvipdfmx/2019-May/000004.html.
	* configure.ac: Version 20190522.

2019-05-08  Akira Kakuto  <kakuto@w32tex.org>

	* dpxfile.c: Avoid buffer overflow.

2019-05-08  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_pdfm.c: Transformation also applies to annotations
	created by pdf:ann.

2019-05-07  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* tt_cmap.c: Fix a bug that CFF charset data were not read.
	* unicode.c: Fix a bug that end-of-buffer calculation was
	wrong.

2019-05-05  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdoc.c: g option affects only annotations created by
	"pdf:bann/eann" and html "a link" specials.
	Report from Joseph Wright:
	https://tug.org/pipermail/tex-live/2019-May/043612.html

2019-05-03  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
