@@ -1,5 +1,4 @@
-# Generated by /home/texlive/karl/Master/bin/x86_64-linux/tlmgr on Fri Jul 26 00:17:10 2019
-# $Id: fmtutil-hdr.cnf 37176 2015-05-04 02:06:19Z preining $
+# Generated by /home/texlive/karl/Master/bin/x86_64-linux/tlmgr on Sat Jul 27 01:53:50 2019
 # Originally written by Thomas Esser, 1998. Public domain.
 #
 # As of TeX Live 2015, fmtutil reads *all* fmtutil.cnf files found.
@@ -116,6 +115,7 @@ pdfetex pdftex language.def -translate-file=cp227.tcx *pdfetex.ini
 #
 # from platex:
 platex eptex language.dat *platex.ini
+platex-dev eptex language.dat *platex.ini
 #
 # from ptex:
 ptex ptex - ptex.ini
@@ -129,6 +129,7 @@ texsis pdftex - -translate-file=cp227.tcx texsis.ini
 #
 # from uplatex:
 uplatex euptex language.dat *uplatex.ini
+uplatex-dev euptex language.dat *uplatex.ini
 #
 # from uptex:
 uptex uptex - uptex.ini
